# text-to-sql-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  history_db.py  main.py  pyproject.toml  requirements.txt  sample.db  server.py
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Composer.tsx  ConnectModal.tsx  EmptyState.tsx  Header.tsx  ResultTable.tsx  Sidebar.tsx  SqlBlock.tsx  StatusLine.tsx
frontend/components/messages/: AgentTurn.tsx  SystemMessage.tsx  UserMessage.tsx
frontend/hooks/: useQueryStream.ts
frontend/lib/: api.ts  types.ts
graph/: db.py  nodes.py  state.py
tools/: clean_sql.py  safety.py
